using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimParameters
{
    public static readonly string isRun = "isRun";
    public static readonly string isBusyHands = "isBusyHands";
    public static readonly string Dives = "Dives";
    public static readonly string Climbes = "Climbes";
}
